backend connection sucessfully

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "git+https://github.com/DavidSanchez2000/movie-analyst-ui"
   },
-  "author": "juan ruiz",
+  "author": "David Sanchez",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/DavidSanchez2000/movie-analyst-ui/issues"
